...
        component={MessagesNavigator}
        options={{ tabBarLabel: 'Messages' }}
      />
      <Tab.Screen
        name="FriendsTab"
        component={FriendsNavigator}
        options={{ tabBarLabel: 'Friends' }}
      />
      <Tab.Screen
        name="NotificationsTab"
        component={NotificationsNavigator}
        options={{ tabBarLabel: 'Alerts' }}
      />
...
